Added flag and some basic flag code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Fiverr2</title>
         <link rel="stylesheet" href="index.css">
@@ -10,4 +10,10 @@
         <h1>James</h1>
         <i class="bi bi-twitter"><a href="https:/?">Twitter</a>></i>
     </body>
+
+
+    <div class="flag-wrapper">
+        <img src="assets/vlagetje.jpg" class="flag" alt="lgbtqia+ flag"/>
+    </div>
+
 </html>
